--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -14028,6 +14028,129 @@ references:
   isSpec: "True"
   fullName: MacroTools.PassiveAbilities.AnimationSpeedMultiplier.OnConstruction
   nameWithType: AnimationSpeedMultiplier.OnConstruction
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack
+  name: ChannelSpellOnAttack
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html
+  commentId: T:MacroTools.PassiveAbilities.ChannelSpellOnAttack
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack
+  nameWithType: ChannelSpellOnAttack
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.#ctor(System.Int32,System.Int32)
+  name: ChannelSpellOnAttack(Int32, Int32)
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack__ctor_System_Int32_System_Int32_
+  commentId: M:MacroTools.PassiveAbilities.ChannelSpellOnAttack.#ctor(System.Int32,System.Int32)
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ChannelSpellOnAttack(System.Int32, System.Int32)
+  nameWithType: ChannelSpellOnAttack.ChannelSpellOnAttack(Int32, Int32)
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.#ctor*
+  name: ChannelSpellOnAttack
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack__ctor_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.#ctor
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ChannelSpellOnAttack
+  nameWithType: ChannelSpellOnAttack.ChannelSpellOnAttack
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId
+  name: AbilityTypeId
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_AbilityTypeId
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId
+  nameWithType: ChannelSpellOnAttack.AbilityTypeId
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId*
+  name: AbilityTypeId
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_AbilityTypeId_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.AbilityTypeId
+  nameWithType: ChannelSpellOnAttack.AbilityTypeId
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId
+  name: DummyAbilityId
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DummyAbilityId
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId
+  nameWithType: ChannelSpellOnAttack.DummyAbilityId
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId*
+  name: DummyAbilityId
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DummyAbilityId_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyAbilityId
+  nameWithType: ChannelSpellOnAttack.DummyAbilityId
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString
+  name: DummyOrderString
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DummyOrderString
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString
+  nameWithType: ChannelSpellOnAttack.DummyOrderString
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString*
+  name: DummyOrderString
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DummyOrderString_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DummyOrderString
+  nameWithType: ChannelSpellOnAttack.DummyOrderString
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase
+  name: DurationBase
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DurationBase
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase
+  nameWithType: ChannelSpellOnAttack.DurationBase
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase*
+  name: DurationBase
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DurationBase_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationBase
+  nameWithType: ChannelSpellOnAttack.DurationBase
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel
+  name: DurationLevel
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DurationLevel
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel
+  nameWithType: ChannelSpellOnAttack.DurationLevel
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel*
+  name: DurationLevel
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_DurationLevel_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.DurationLevel
+  nameWithType: ChannelSpellOnAttack.DurationLevel
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel(unit)
+  name: GetAbilityLevel(unit)
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_GetAbilityLevel_unit_
+  commentId: M:MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel(unit)
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel(unit)
+  nameWithType: ChannelSpellOnAttack.GetAbilityLevel(unit)
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel*
+  name: GetAbilityLevel
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_GetAbilityLevel_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.GetAbilityLevel
+  nameWithType: ChannelSpellOnAttack.GetAbilityLevel
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage
+  name: OnDealsDamage()
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_OnDealsDamage
+  commentId: M:MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage()
+  nameWithType: ChannelSpellOnAttack.OnDealsDamage()
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage*
+  name: OnDealsDamage
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_OnDealsDamage_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.OnDealsDamage
+  nameWithType: ChannelSpellOnAttack.OnDealsDamage
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance
+  name: ProcChance
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_ProcChance
+  commentId: P:MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance
+  nameWithType: ChannelSpellOnAttack.ProcChance
+- uid: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance*
+  name: ProcChance
+  href: api-macroTools/MacroTools.PassiveAbilities.ChannelSpellOnAttack.html#MacroTools_PassiveAbilities_ChannelSpellOnAttack_ProcChance_
+  commentId: Overload:MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance
+  isSpec: "True"
+  fullName: MacroTools.PassiveAbilities.ChannelSpellOnAttack.ProcChance
+  nameWithType: ChannelSpellOnAttack.ProcChance
 - uid: MacroTools.PassiveAbilities.DefensiveOrbs
   name: DefensiveOrbs
   href: api-macroTools/MacroTools.PassiveAbilities.DefensiveOrbs.html
